# elm-doc

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  Pipfile  README.md  RELEASING.md  ci.sh  conftest.py  dependencies.yml  dev-requirements.txt  dodo.py  pyproject.toml  requirements.in  requirements.txt  setup.py  shell.nix  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml
elm_doc/: __init__.py  asset_tasks.py  catalog_tasks.py  cli.py  elm_package.py  elm_platform.py  node_modules.py  package_tasks.py  page_template.py  tasks.py
elm_docs/: asset_tasks.py  catalog_tasks.py  cli.py  elm_package.py  elm_platform.py  package_tasks.py  tasks.py
native/: overlay_elm_package.c  prepend_mountpoint.js
src/elm_doc/: __init__.py  asset_tasks.py  catalog_tasks.py  cli.py  decorators.py  elm_codeshift.py  elm_package.py  elm_parser.py  elm_platform.py  elm_project.py  loader.py  node_modules.py  package_tasks.py  page_tasks.py  page_template.py  project_tasks.py  run_config.py  task_loader.py  tasks.py  utils.py
src/elm_doc/assets/: .gitignore
src/elm_doc/elm_parser/: __init__.py  lines.py  ports.py
src/elm_doc/tasks/: __init__.py  assets.py  catalog.py  html.py  package.py  page.py  project.py
tests/: conftest.py  dump_modified_tarballs.py  test_asset_tasks.py  test_cli.py  test_elm_codeshift.py  test_elm_package.py  test_elm_parser.py  test_elm_project.py  test_helpers.py  test_loader.py  test_project_tasks.py  test_task_loader.py  test_tasks.py  test_tasks_assets.py  test_tasks_project.py  test_workspace.py
tests/fixtures/0.18.0/: Main.elm
tests/fixtures/0.19.0/: Main.elm  MissingModuleComment.elm  PortModuleA.elm  PortModuleB.elm  PublicFunctionNotInAtDocs.elm
tests/fixtures/0.19.1/: MissingModuleComment.elm
tests/fixtures/issue-55/: .gitignore  Main.elm  elm.json
twine-select/: setup.py
workspace/: .gitignore  README.md  elm.json
workspace/0.19.0/: elm.json
workspace/0.19.1/: elm.json
workspace/src/: Main.elm
