[tool.poetry]
name = "elm-doc"
version = "1.0.0b4"
description = "Generate static documentation for your Elm application"
license = "BSD-3-Clause"
authors = ["ento <ento+github@i.pearlwaffles.xyz>"]

[tool.poetry.dependencies]
python = "^3.5"
attrs = "^19.3.0"
click = "^7.1.2"
doit = "^0.32.0"
parsy = "^1.3.0"
requests = "^2.24.0"
retrying = "^1.3.3"

[tool.poetry.dev-dependencies]
tox = "^3.16.1"
tox-venv = "^0.4.0"
wheel = "^0.34.2"
pytest-mock = "^3.2.0"
check-manifest = "^0.42"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
